fix z-index so own header stays on top

--- a/client/src/style/style.scss
+++ b/client/src/style/style.scss
@@ -246,7 +246,7 @@ tbody th {
    left: 100px;
    // background-color: gray;
    opacity: 1;
-   // z-index: 100;
+   z-index: 100;
 }
 
 /* To have the header in the first column stick to the left: */
